--- a/vagrant/Manual_provisioning_WinMacIntel/Vagrantfile
+++ b/vagrant/Manual_provisioning_WinMacIntel/Vagrantfile
@@ -4,55 +4,54 @@ Vagrant.configure("2") do |config|
   
 ### DB vm  ####
   config.vm.define "db01" do |db01|
-    db01.vm.box = "eurolinux-vagrant/centos-stream-9"
+    db01.vm.box = "geerlingguy/centos7"
     db01.vm.hostname = "db01"
-    db01.vm.network "private_network", ip: "192.168.56.55"
+    db01.vm.network "private_network", ip: "192.168.28.55"
     db01.vm.provider "virtualbox" do |vb|
      vb.memory = "600"
-   end
-
+    end
   end
   
 ### Memcache vm  #### 
   config.vm.define "mc01" do |mc01|
-    mc01.vm.box = "eurolinux-vagrant/centos-stream-9"
+    mc01.vm.box = "geerlingguy/centos7"
     mc01.vm.hostname = "mc01"
-    mc01.vm.network "private_network", ip: "192.168.56.54"
+    mc01.vm.network "private_network", ip: "192.168.28.54"
     mc01.vm.provider "virtualbox" do |vb|
      vb.memory = "600"
-   end
+    end
   end
   
 ### RabbitMQ vm  ####
   config.vm.define "rmq01" do |rmq01|
-    rmq01.vm.box = "eurolinux-vagrant/centos-stream-9"
-  rmq01.vm.hostname = "rmq01"
-    rmq01.vm.network "private_network", ip: "192.168.56.53"
+    rmq01.vm.box = "geerlingguy/centos7"
+    rmq01.vm.hostname = "rmq01"
+    rmq01.vm.network "private_network", ip: "192.168.28.53"
     rmq01.vm.provider "virtualbox" do |vb|
      vb.memory = "600"
-   end
+    end
   end
   
 ### tomcat vm ###
    config.vm.define "app01" do |app01|
-    app01.vm.box = "eurolinux-vagrant/centos-stream-9"
+    app01.vm.box = "geerlingguy/centos7"
     app01.vm.hostname = "app01"
-    app01.vm.network "private_network", ip: "192.168.56.52"
+    app01.vm.network "private_network", ip: "192.168.28.52"
     app01.vm.provider "virtualbox" do |vb|
      vb.memory = "800"
-   end
-   end
+    end
+  end
    
   
 ### Nginx VM ###
   config.vm.define "web01" do |web01|
     web01.vm.box = "ubuntu/jammy64"
     web01.vm.hostname = "web01"
-  web01.vm.network "private_network", ip: "192.168.56.51"
-  web01.vm.provider "virtualbox" do |vb|
-     vb.gui = true
-     vb.memory = "800"
-   end
-end
+    web01.vm.network "private_network", ip: "192.168.28.51"
+    web01.vm.provider "virtualbox" do |vb|
+      vb.gui = true
+      vb.memory = "800"
+    end
+  end
   
 end
